header-line mobile sm

--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -13,7 +13,7 @@ html
 
 body
     font-family: Inter
-    padding-top: 40px
+    padding-top: 40rem
     background: linear-gradient(to bottom, #EBEBEB, #858585)
 
 ul
