--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -31,6 +31,22 @@ li
     margin: auto
     padding: 0 2.5rem
 
+ul
+    padding-left: 0
+
+.header-sm-popup
+    position: fixed
+    top: 200%
+    width: 100%
+    height: 110vh
+    z-index: 11
+    left: 0
+    background-color: #F4D469
+    transition: all .3s ease
+
+.header-sm-popup.popup-active
+    top: 55px
+
 .header-line
     position: fixed
     top: 0
@@ -39,9 +55,11 @@ li
     width: 100%
     background-color: #F4D469
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25)
+    ul
+        min-height: 56px
 
 
-.header-line ul li a
+.header-line ul li a, .header-sm-popup ul li a
     color: #000
     font-size: 5rem
     font-style: italic
@@ -53,8 +71,48 @@ li
     background-size: 100% 500%
     background-position: 0
     transition: all .3s ease
+    text-align: center
     &:hover
         background-position-y: 100%
+
+.burger span
+    position: relative
+    display: inline-block
+    width: 8rem
+    height: 0.5rem
+    background-color: #000
+    z-index: 20
+    transition: all .3s ease
+    &::before
+        content: ''
+        position: absolute
+        display: inline-block
+        width: 8rem
+        height: 0.5rem
+        background-color: #000
+        top: -2rem
+        z-index: 20
+        transition: all .3s ease
+    &::after
+        content: ''
+        position: absolute
+        display: inline-block
+        width: 8rem
+        height: 0.5rem
+        background-color: #000
+        top: 2rem
+        transition: all .3s ease
+
+.burger span.active
+    background-color: transparent
+    &::before
+        top: 0
+        transform: rotate(-45deg)
+    &::after
+        top: 0
+        transform: rotate(45deg)
+
+
 .header-underline 
     column-gap: 10rem
     row-gap: 6rem
