--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -388,3 +388,70 @@ footer
         &:hover
             text-decoration: underline
 
+.product-card-info
+    padding-top: 10rem
+    margin-bottom: 5rem
+
+    &>div>div
+        background-color: #fff
+        padding: 2rem
+
+.product-card-info-img > div > img
+    width: 100%
+    height: 100rem
+    object-fit: cover
+    margin-bottom: 1rem
+    +media(991)
+        height: 80rem
+
+.next-images-line img
+    height: 35rem
+    width: 100%
+    object-fit: cover
+    +media(991)
+        height: 26rem
+
+.product-price
+    color: #000
+    font-size: 16rem
+    font-style: italic
+    font-weight: 300
+
+.buy-btn a
+    display: inline-block
+    width: 100%
+    padding: 15px 10rem
+    border-radius: 0px 15px 0px 0px
+    background: #FF5E5E
+    color: #000
+    font-size: 10rem
+    font-style: italic
+    font-weight: 200
+    text-align: center
+    transition: all .3s ease
+    &:hover
+        background: #ea4646
+        transform: scale(1.02)
+
+div.product-card-info-description
+    padding: 7rem 0
+    +media(991)
+        padding: 0 7rem
+    h2
+        color: #000
+        font-size: 10rem
+        font-style: italic
+        font-weight: 200
+
+    p
+        color: #000
+        font-size: 8rem
+        font-style: italic
+        font-weight: 100
+        margin-bottom: 4rem
+
+div.product-card-info-description > div
+    padding:  4rem 2rem
+    height: 100%
+    +media(991)
+        padding:  4rem 9rem
