--- a/src/pug/components/product-card.pug
+++ b/src/pug/components/product-card.pug
@@ -3,7 +3,7 @@ figure.col-sm-12.col-md-4.col-lg-3
     figcaption 
         .figure-image 
             img(src="img/product-card-image.jpeg", alt="")
-            a(href="#").figure-to-card-page
+            a(href="product-card.html").figure-to-card-page
         .card-text-block.d-flex.justify-content-between.w-100
             .description-card 
                 p  Тіпа жосткий старий товарчик
