--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -44,62 +44,73 @@ html(lang="en")
                 include components/product-card.pug
             .categories.row.g-5#categories
                 
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/category1.jpg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Електроніка
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/clock.jpeg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Годинники
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/dishes.jpeg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Посуд
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/models.jpeg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Статуетки, моделі
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/art.jpeg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Мистецтво
-                a(href="#").category-block.col-sm-6.col-md-12.col-lg-6
-                    .category.d-flex.d-flex.align-items-center.row
-                        img(src="img/other.jpeg", alt="").col-12.col-md-4.col-lg-4
-                        p.col-sm-12.col-md-8.col-lg-6 Інше
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/category1.jpg", alt="")
+                        p.col-8.d-flex.align-items-center Електроніка
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/clock.jpeg", alt="")
+                        p.col-8.d-flex.align-items-center Годинники
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/dishes.jpeg", alt="")
+                        p.col-8.d-flex.align-items-center Посуд
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/models.jpeg", alt="")
+                        p.col-8.d-flex.align-items-center Статуетки, моделі
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/art.jpeg", alt="")
+                        p.col-8.d-flex.align-items-center Мистецтво
+                a(href="#").category-block.col-12.col-lg-6
+                    .category.d-flex.align-items-center.row
+                        .col-4
+                            img(src="img/other.jpeg", alt="")
+                        p.col-8.d-flex.align-items-center Інше
+
+
+
             
             .aboutus.d-flex.justify-content-between.row.g-5#aboutus
                 section.aboutus-text.col-sm-12.col-md-12.col-lg-6
-                    h1 Вітаємо вас у нашому інтернет-магазині “Антік”.
-                    p Ми – команда захоплених колекціонерів і цінителів антикваріату, яка вже понад 5 років займається доставкою унікальних старовинних речей із Нідерландів в Україну. Наш асортимент включає предмети з історією: від витончених меблів і порцеляни до колекційних дрібниць, які наповнять ваш простір атмосферою минулих століть. 
-                        br 
-                        br
-                        | Ми маємо фізичний магазин у місті Хмельницький, який став місцем зустрічі для колекціонерів та поціновувачів старовини. А тепер раді вітати вас і на нашому новому сайті, де можна легко переглянути та придбати товари онлайн. Кожен наш предмет ретельно відбирається, щоб відповідати вашим очікуванням і дарувати радість від володіння справжніми антикварними скарбами. Ми віримо, що кожна річ має свою душу і здатна стати особливою частиною вашого дому чи колекції. 
-                        br
-                        br
-                        | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів! 
-                .image-block.col-sm-12.col-md-12.col-lg-6.d-flex.justify-content-between
+                    .scroll
+                        h1 Вітаємо вас у нашому інтернет-магазині “Антік”.
+                        p Ми – команда захоплених колекціонерів і цінителів антикваріату, яка вже понад 5 років займається доставкою унікальних старовинних речей із Нідерландів в Україну. Наш асортимент включає предмети з історією: від витончених меблів і порцеляни до колекційних дрібниць, які наповнять ваш простір атмосферою минулих століть. 
+                            br 
+                            br
+                            | Ми маємо фізичний магазин у місті Хмельницький, який став місцем зустрічі для колекціонерів та поціновувачів старовини. А тепер раді вітати вас і на нашому новому сайті, де можна легко переглянути та придбати товари онлайн. Кожен наш предмет ретельно відбирається, щоб відповідати вашим очікуванням і дарувати радість від володіння справжніми антикварними скарбами. Ми віримо, що кожна річ має свою душу і здатна стати особливою частиною вашого дому чи колекції. 
+                            br
+                            br
+                            | Долучайтеся до нашої спільноти колекціонерів та знайдіть свою історію серед наших скарбів! 
+                .image-block.col-sm-12.col-md-12.col-lg-6
 
                         img(src="img/aboutus.jpg", alt="")
                         .d-flex.justify-content-center
                             a(href="#").button Каталог
-            .aboutus.d-flex.justify-content-between.row.g-5.flex-wrap-wrap-reverse
-                .image-block.col-sm-12.col-md-12.col-lg-6.d-flex.justify-content-between
+            .aboutus.d-flex.justify-content-between.row.g-5.flex-wrap-wrap-reverse.nova-section
+                .image-block.col-sm-12.col-md-12.col-lg-6
 
                         img(src="img/novaposht.jpeg", alt="").image-block--img
                         .d-flex.justify-content-center
                             a(href="#").button Каталог
                 section.aboutus-text.col-sm-12.col-md-12.col-lg-6
-                    h2 Як придбати товар у нашому інтернет-магазині: 
+                    .scroll
+                        h2 Як придбати товар у нашому інтернет-магазині: 
 
-                    ol
-                        li 1. Спершу, оберіть потрібний товар! У нас точно знайдеться те, що буде вам по душі та доповнить колекцію...
-                        li 2. Додайте усі товари, котрі бажаєте придбати у кошик.
-                        li 3. Зайдіть до свого кошика і натисніть кнопку “замовити”, після чого заповніть усю інформацію.
-                        li 4. Протягом нетривалого часу вам напише адміністратор для уточнення та відправки замовлення.
+                        ol
+                            li 1. Спершу, оберіть потрібний товар! У нас точно знайдеться те, що буде вам по душі та доповнить колекцію...
+                            li 2. Додайте усі товари, котрі бажаєте придбати у кошик.
+                            li 3. Зайдіть до свого кошика і натисніть кнопку “замовити”, після чого заповніть усю інформацію.
+                            li 4. Протягом нетривалого часу вам напише адміністратор для уточнення та відправки замовлення.
 
-                    p Усі замовлення відправляються виключно “Накладним платежем”, або “сейф-сервісом”, отже ваша безпека та якість гарантована!
+                        p Усі замовлення відправляються виключно “Накладним платежем”, або “сейф-сервісом”, отже ваша безпека та якість гарантована!
 
             .contact-form#form
                 form(action="") 
