--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -10,6 +10,8 @@ html
     font-size: 3px
     +media(510)
         font-size: 4px
+    +media(2000)
+        font-size: 6px
 
 body
     font-family: Inter
@@ -75,11 +77,14 @@ ul
     &:hover
         background-position-y: 100%
 
+.header-line ul li.active a
+    background-position-y: 100%
+
 .burger span
     position: relative
     display: inline-block
     width: 8rem
-    height: 0.5rem
+    height: 0.2rem
     background-color: #000
     z-index: 20
     transition: all .3s ease
@@ -88,7 +93,7 @@ ul
         position: absolute
         display: inline-block
         width: 8rem
-        height: 0.5rem
+        height: 0.2rem
         background-color: #000
         top: -2rem
         z-index: 20
@@ -98,7 +103,7 @@ ul
         position: absolute
         display: inline-block
         width: 8rem
-        height: 0.5rem
+        height: 0.2rem
         background-color: #000
         top: 2rem
         transition: all .3s ease
@@ -184,6 +189,11 @@ ul
     position: relative
     max-width: 72.5rem
     overflow: hidden
+    transition: all .5s ease
+    
+    &:hover
+        transform: scale(1.05)
+        
     &::before
         content: ''
         position: absolute
@@ -197,8 +207,9 @@ ul
         transition: all .3s ease
 
     
-    &:hover::before
-        top: 2.5rem
+
+.show-circle::before
+    top: 2.5rem !important
 
 
 .figure-image
@@ -233,7 +244,7 @@ ul
         font-style: italic
         font-weight: 300
         &:first-child
-            min-height: 90px
+            min-height: 22.5rem
 
 p.price
     color: #F83A3A
@@ -244,7 +255,7 @@ p.price
     border-radius: 15px 0px 0px 0px
     background: #F4D469
     img
-        max-width: 10rem
+        width: 10rem
         transition: all .3s ease
     &:hover img
         transform: scale(1.2)
@@ -258,8 +269,9 @@ p.price
     &:hover
         background-position-y: 100%
     img
+        display: block
         height: 52.5rem
-        width: 52.5rem
+        width: 95%
         object-fit: cover
         border-radius: 7.5rem 0px 0px 0px
         margin-right: 5rem
@@ -269,26 +281,24 @@ p.price
         font-style: italic
         font-weight: 100
         min-height: 36rem
+        padding-left: 5rem
         +media(769)
             min-height: auto
 
         +media(991)
             font-size: 10rem
-        +media(1090)
-            font-size: 12rem
+
 
 .category-block
     overflow: hidden
     transition: all .5s ease
-    text-align: center
+    text-align: left
     
     img
         margin: 5.75rem auto
         +media(769)
             margin: 0 5.75rem 0 -1rem
 
-    +media(769)
-        text-align: left
 
 
 .category-block:hover
@@ -311,21 +321,53 @@ p.price
         margin-bottom: 5rem
 
     section
-        padding: 10rem 15rem 10rem 10rem
-        border-radius: 0px 0px 133px 0px
+        overflow-y: scroll
+        padding: 10rem 5rem 10rem 10rem
+        border-radius: 0px 0px 30px 0px
         background: linear-gradient(180deg, #F4D469 1.24%, #A7825D 100%)
+        margin-bottom: 10rem
+        +media(991)
+            border-radius: 0px 0px 133px 0px
+        .scroll
+            width: 100%
+            height: 100%
+            overflow-y: scroll
+            padding-right: 10rem
+            &::-webkit-scrollbar
+                width: 5px
+            &::-webkit-scrollbar-track
+                background: transparent
+            &::-webkit-scrollbar-thumb
+
+                background: #e6b71e
+                border-radius: 10px
+
+
+
+            
+        +media(991)
+            height: 225rem
+.nova-section 
+    section
+        height: 140rem
+        overflow-y: scroll
+        +media(991)
+            height: 171rem
+    .image-block img
+        height: 144rem
 
 .image-block 
-    flex-direction: column
-    align-items: center
+
     img
         display: block
         max-width: 100rem
-        height: 65vw
+        height: 196rem
         min-height: 600px
         border-radius: 56.5rem
         object-fit: cover
         margin-bottom: 7rem
+        margin: 0 auto
+        margin-bottom: 10rem
         +media(360)
             max-width: 113rem
     a
@@ -344,7 +386,9 @@ img.image-block--img
     margin-bottom: 10rem
 
 .aboutus-text:last-child
-    border-radius: 72px 0px 0px 0px
+    border-radius: 30px 0px 0px 0px
+    +media(991)
+        border-radius: 72px 0px 0px 0px
 
 .contact-form 
     display: block
