--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -8,13 +8,13 @@ header
                         .burger
                             span
                     li.d-none.d-md-block.d-lg-block
-                        a(href="#search" data-section="search") Пошук
+                        a(href="index.html#search" data-section="search") Пошук
                     li.d-none.d-md-block.d-lg-block
-                        a(href="#categories" data-section="categories") Категорії
+                        a(href="index.html#categories" data-section="categories") Категорії
                     li.d-none.d-md-block.d-lg-block
-                        a(href="#aboutus" data-section="aboutus") Про нас
+                        a(href="index.html#aboutus" data-section="aboutus") Про нас
                     li.d-none.d-md-block.d-lg-block
-                        a(href="#form" data-section="form") Зв'язок
+                        a(href="index.html#form" data-section="form") Зв'язок
                     
                 ul.d-flex
                     a(href="#").cart.d-flex.align-items-center
