--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,6 +11,15 @@ html(lang="en")
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
     body 
+        //- .basket-popup 
+        //-     .basket-header.d-flex.justify-content-between
+        //-         h2 Кошик
+        //-         .cross
+        //-     .basket-main.products.row.g-5.d-flex.justify-content-center
+        //-         include components/product-basket.pug
+        //-         include components/product-basket.pug
+        //-         include components/product-basket.pug
+            
         .header-sm-popup
             ul
                 li
@@ -22,6 +31,7 @@ html(lang="en")
                 li
                     a(href="#form").w-100 Зв'язок
         include components/Header.pug
+ 
         
         main.wrapper
             .header-underline.d-flex.align-items-center#search
@@ -44,32 +54,32 @@ html(lang="en")
                 include components/product-card.pug
             .categories.row.g-5#categories
                 
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/category1.jpg", alt="")
                         p.col-8.d-flex.align-items-center Електроніка
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/clock.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Годинники
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/dishes.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Посуд
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/models.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Статуетки, моделі
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/art.jpeg", alt="")
                         p.col-8.d-flex.align-items-center Мистецтво
-                a(href="#").category-block.col-12.col-lg-6
+                a(href="category.html").category-block.col-12.col-lg-6
                     .category.d-flex.align-items-center.row
                         .col-4
                             img(src="img/other.jpeg", alt="")
