--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -304,6 +304,7 @@ p.price
 .category-block:hover
     transform: translateY(-7px)
 
+
 .aboutus 
     h1, h2
         color: #000
@@ -321,6 +322,7 @@ p.price
         margin-bottom: 5rem
 
     section
+        height: 140rem
         overflow-y: scroll
         padding: 10rem 5rem 10rem 10rem
         border-radius: 0px 0px 30px 0px
@@ -499,3 +501,41 @@ div.product-card-info-description > div
     height: 100%
     +media(991)
         padding:  4rem 9rem
+
+
+.categories-main
+    padding-top: 20rem
+
+    h1
+        color: #000
+        font-size: 16rem
+        font-style: italic
+        font-weight: 300
+        padding-left: 4rem
+        margin-bottom: 7rem
+
+.basket-popup 
+    position: fixed
+    min-width: 300px
+    width: 50%
+    height: 100vh
+    top: 100px
+    z-index: 20
+
+.basket-header
+    border-radius: 0px 0px 0px 15px
+    background: linear-gradient(175deg, #F4D469 23.11%, #E7C667 34.03%, #A7825D 87.35%)
+    margin-bottom: 8rem
+    h2
+        color: #000
+        font-size: 10rem
+        font-style: italic
+        font-weight: 100
+        padding: 4rem 8rem
+
+
+.figure-basket
+    max-width: 100% !important
+    width: 100%
+    .figure-image img
+        height: 30rem
