--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -240,11 +240,15 @@ ul
         display: flex
         align-items: center
         color: #000
-        font-size: 5rem
+        font-size: 4rem
         font-style: italic
         font-weight: 300
+        +media(425)
+            font-size: 5rem
         &:first-child
-            min-height: 22.5rem
+            min-height: 17rem
+            +media(425)
+                min-height: 22.5rem
 
 p.price
     color: #F83A3A
