--- a/src/pug/components/product-basket.pug
+++ b/src/pug/components/product-basket.pug
@@ -1,4 +1,4 @@
-.col-6
+.col-6.col-md-4.col-lg-3
     figure.figure-basket
         figcaption 
             .figure-image 
@@ -8,5 +8,5 @@
                 a(href="product-card.html").description-card 
                     p  Тіпа жосткий старий товарчик
                     p.price 999 грн.
-                a(href="#").card-btn.al-center.d-flex.justify-content-center
-                    img(src="img/cart.svg", alt="")
+                a(href="#").card-btn.al-center.d-flex.justify-content-center.align-items-center
+                    img(src="img/cross.svg", alt="")
