--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -97,10 +97,10 @@ header
 .header-sm-popup
     ul
         li
-            a(href="#search").w-100 Пошук
+            a(href="index.html#search").w-100 Пошук
         li
-            a(href="#categories").w-100 Категорії
+            a(href="index.html#categories").w-100 Категорії
         li
-            a(href="#aboutus").w-100 Про нас
+            a(href="index.html#aboutus").w-100 Про нас
         li
-            a(href="#form").w-100 Зв'язок
+            a(href="index.html#form").w-100 Зв'язок
