--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -124,7 +124,7 @@ html(lang="en")
                     input(type="text", name="userName" placeholder="Написати...").search
 
                     .form-btn.d-flex.justify-content-center
-                        button(type="submit").button Зв'язатись
+                        button(type="submit").button.feedback-popup-open Зв'язатись
         include components/Footer.pug
 
         script(src="js/scripts.js") 
