--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -595,7 +595,7 @@ div.product-card-info-description > div
     left: 0
     border-radius: 15px 0px 0px 0px
     background: linear-gradient(175deg, #F4D469 23.11%, #E7C667 34.03%, #A7825D 87.35%)
-
+    z-index: 2
     a
         width: auto
         border-radius: 15px 0px 0px 0px
@@ -672,3 +672,32 @@ input[type="radio"]:checked
     border-radius: 7.5rem 0px 0px 0px
     & > img
         border-radius: 7.5rem 0px 0px 0px
+
+.succsessful
+    position: fixed
+    top: 50%
+    left: 50%
+    width: 70vw
+    min-width: 310px
+    transform:  translate(-50%, -50%)
+    z-index: 100
+    border-radius: 12.5rem 0px
+    background: linear-gradient(270deg, #F4D469 0%, #A7825D 100%)
+    text-align: center
+    padding: 10rem
+    +media(860)
+        width: 50vw
+    p
+        color: #000
+        font-size: 6rem
+        font-style: italic
+        font-weight: 100
+        margin-bottom: 5rem
+        +media(615)
+            font-size: 8rem
+        +media(991)
+            font-size: 12rem
+    .button
+        font-size: 4rem
+        +media(615)
+            font-size: 6rem
