--- a/src/pug/product-card.pug
+++ b/src/pug/product-card.pug
@@ -38,32 +38,15 @@ html(lang="en")
 
                 .product-card-info-description.col-12.col-lg-6#heightJsBlockCard
                     div.bgwhite
-                        h2 Тіпа жосткий старий товарчик
-                        p Цю фігню ви більше ніде не найдете. Це сама фігняна фігня із всіх всеможливих фігонь на цій планеті.
-                        p Доречі, точно! Це ж планета Земля... Хаха, ви ж навіть не знали, що вашу попер допер колекшн доповне Земна фігняна фігулювовівіна!!!
-                        p Доставку вам хоть в китай замутимо.В нас доствщики дяді колі все роблять чьотко!!!
-                        p Я вам отвечаю. Це самі круті дядьоли на райончику. Це дядя Тоік і Василь Петуховров. Вони люблять на своїх ланосах антік розвозити по Китаю...
-                        p Цю фігню ви більше ніде не найдете. Це сама фігняна фігня із всіх всеможливих фігонь на цій планеті.
-                        p Доречі, точно! Це ж планета Земля... Хаха, ви ж навіть не знали, що вашу попер допер колекшн доповне Земна фігняна фігулювовівіна!!!
-                        p Доставку вам хоть в китай замутимо.В нас доствщики дяді колі все роблять чьотко!!!
-                        p Я вам отвечаю. Це самі круті дядьоли на райончику. Це дядя Тоік і Василь Петуховров. Вони люблять на своїх ланосах антік розвозити по Китаю...
-
-
-            .products.row.g-5.d-flex.justify-content-center
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
+                        h2
+                        p
+            .products.row.g-5.d-flex.justify-content-center#productCardsSimilar
+                
             
         include components/Footer.pug
 
+
+
         script(src="js/scripts.js") 
+        script updateBasket();
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
