--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -15,23 +15,13 @@ html(lang="en")
         
         main.wrapper.categories-main
             
-            h1 Посуд
+            h1 
 
-            .products.row.g-5.d-flex.justify-content-center
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
-                include components/product-card.pug
+            .products.row.g-5.d-flex#productsCategory
+                
             
         include components/Footer.pug
 
         script(src="js/scripts.js") 
+        script updateBasket();
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
