--- a/src/sass/generals.sass
+++ b/src/sass/generals.sass
@@ -474,7 +474,7 @@ footer
     +media(450)
         font-size: 16rem
 
-.buy-btn a
+.buy-btn a, .buy-btn button
     display: inline-block
     width: 100%
     padding: 15px 10rem
@@ -486,6 +486,7 @@ footer
     font-weight: 200
     text-align: center
     transition: all .3s ease
+    border: none
     &:hover
         background: #ea4646
         transform: scale(1.02)
@@ -512,6 +513,7 @@ div.product-card-info-description
 
 
 div.product-card-info-description > div
+    width: 100%
     overflow-y: scroll
     padding:  4rem 2rem
     border-radius: 7.5rem 0px
@@ -701,3 +703,7 @@ input[type="radio"]:checked
         font-size: 4rem
         +media(615)
             font-size: 6rem
+
+
+#productsCategory
+    margin-bottom: 30rem
