--- a/src/pug/components/Header.pug
+++ b/src/pug/components/Header.pug
@@ -78,7 +78,7 @@ header
     .basket-header
         .wrapper.d-flex.justify-content-between
             h2 Кошик
-            .cross.d-flex.justify-content-center.align-items-center.cart-open-btn
+            .cross.d-flex.justify-content-center.align-items-center.cart-open-btn(onclick= "location.reload()")
                 img(src="img/cross.svg", alt="")
     .wrapper.basket-main.products.row.g-5.d-flex#productsInBasket
 
